feat: update version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <title>calculator</title>
 </head>
-
+<!-- Version 1.0 18.11.2020 Create by Ulad Sasnouski -->
 <body>
   <main class="main">
       <div class="calc">
